src/test/ui/generator/not-send-sync.stderr
error[E0277]: the trait bound `std::cell::Cell<i32>: std::marker::Sync` is not satisfied
  --> $DIR/not-send-sync.rs:26:5
   |
26 |     assert_send(|| {
   |     ^^^^^^^^^^^ `std::cell::Cell<i32>` cannot be shared between threads safely
   |
   = help: the trait `std::marker::Sync` is not implemented for `std::cell::Cell<i32>`
   = note: required because of the requirements on the impl of `std::marker::Send` for `&std::cell::Cell<i32>`
   = note: required because it appears within the type `[generator@$DIR/not-send-sync.rs:26:17: 30:6 a:&std::cell::Cell<i32> _]`
note: required by `main::assert_send`
  --> $DIR/not-send-sync.rs:17:5
   |
17 |     fn assert_send<T: Send>(_: T) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `std::cell::Cell<i32>: std::marker::Sync` is not satisfied in `[generator@$DIR/not-send-sync.rs:19:17: 23:6 (std::cell::Cell<i32>, ())]`
  --> $DIR/not-send-sync.rs:19:5
   |
19 |     assert_sync(|| {
   |     ^^^^^^^^^^^ `std::cell::Cell<i32>` cannot be shared between threads safely
   |
   = help: within `[generator@$DIR/not-send-sync.rs:19:17: 23:6 (std::cell::Cell<i32>, ())]`, the trait `std::marker::Sync` is not implemented for `std::cell::Cell<i32>`
   = note: required because it appears within the type `(std::cell::Cell<i32>, ())`
   = note: required because it appears within the type `[generator@$DIR/not-send-sync.rs:19:17: 23:6 (std::cell::Cell<i32>, ())]`
note: required by `main::assert_sync`
  --> $DIR/not-send-sync.rs:16:5
   |
16 |     fn assert_sync<T: Sync>(_: T) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

